Added chord chart line below to work on spacing of dashes

--- a/index.htm
+++ b/index.htm
@@ -97,8 +97,9 @@ when posting you don't need to remember anything else except to set the class na
 
 <p>Here, a chord phrase is written directly into the web page..</p>
 <div class="jtab chordonly"> E / / / | A7 / B7 / || </div>
+<div class="jtab chordonly"> E A Em7 G6 | A7 E B7 F || </div>
 <p>Here's an example combining chords and tab notation..</p>
-<div class="jtab">Bm $3 4 4h5p3h4 5 $2 3 5 7 7h8p7 5/7 | A $4 7 9 $3 7 6 $5 9 $4 7h9 7 $5 9\7 5/7 | </div>
+<div class="jtab">Bm $3 4 4h5p3h4 5 $2 3 5 7 7h8p7 5/7 | A $4 12 11 10 $3 7 6 $5 9 $4 7h9 7 $5 9\7 5/7 | </div>
 <p>Or just tab notation..</p>
 <div class="jtab tabonly">$4.7/9.$3.6/8.$2.5/7 9p7 $2.9.$3.9.$4.9 </div>
 
