--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,8 @@ when posting you don't need to remember anything else except to set the class na
 <div class="jtab">Bm $3 4 4h5p3h4 5 $2 3 5 7 7h8p7 5/7 | A $4 12 11 10 $3 7 6 $5 9 $4 7h9 7 $5 9\7 5/7 |</div>
 <p>Or just tab notation..</p>
 <div class="jtab tabonly">$4.7/9.$3.6/8.$2.5/7 9p7 $2.9.$3.9.$4.9</div>
-
+<p>Testing spacing idea..</p>
+<div class="jtab tabonly">$4.7 $6.5 $2.1.$3.0 $4.3 $4. $4. $5.6 $1. $1. $1. | $5.9 $5.8 $4. $4. $6.8 $1. $1. $1. $5.4 |</div>
 
 <a name="notation"><h2>Notation Reference</h2></a>
 <p>
